--- a/Código/06- Animais-Fantásticos/index.html
+++ b/Código/06- Animais-Fantásticos/index.html
@@ -19,8 +19,20 @@
   <div class="grid-container">
     <header class="header-menu">
       <nav class="menu" data-menu="suave">
-        <ul class="">
+        <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
+        <ul data-menu="lista" id="menu">
           <li><a href="#animais">Animais</a></li>
+
+          <li data-dropdown>
+            <a href="./sobre.html">Sobre</a>
+            <ul class="dropdown-menu">
+              <li><a href="./empresa.html">A empresa</a></li>
+              <li><a href="./equipe.html">Equipe</a></li>
+              <li><a href="./socios.html">Sócios</a></li>
+              <li><a href="./investidores.html">Investidores</a></li>
+            </ul>
+          </li>
+
           <li><a href="#faq">Faq</a></li>
           <li><a href="#contato">Contato</a></li>
           <li><a href="./" data-modal="abrir">Login ➥</a></li>
@@ -111,6 +123,10 @@
       </dl>
     </section>
 
+    <section class="container numeros" data-anime="scroll">
+      <h1 class="titulo">Números</h1>
+      <div class="numeros-grid"></div>
+    </section>
 
     <section class="container contato" data-anime="scroll" id="contato">
       <h1 class="titulo">Contato</h1>
@@ -122,8 +138,8 @@
         <li>+55 (21) 9999-9999</li>
         <li>Rua do Conde, nº 21</li>
         <li>Rio de Janeiro - RJ</li>
-        <li>Doe 0.0080 bitcoin para nos ajudar</li>
-        <li>Seg à Sex das 8 às 18</li>
+        <li>Doe <span class="btc-preco">0</span> bitcoin para nos ajudar</li>
+        <li data-semana="1,2,3,4,5" data-horario="8,18">Seg à Sex das 8 às 18</li>
       </ul>
     </section>
 
